[gd_scene load_steps=20 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Comic Sans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Player/Objective.gd" type="Script" id=3]
[ext_resource path="res://Player/Dialog.gd" type="Script" id=4]
[ext_resource path="res://Player/Gun.png" type="Texture" id=5]
[ext_resource path="res://Player/Gun.gd" type="Script" id=6]
[ext_resource path="res://Player/Gunshot.wav" type="AudioStream" id=7]
[ext_resource path="res://Player/SpeedrunTimer.gd" type="Script" id=8]

[sub_resource type="CapsuleMesh" id=7]
mid_height = 3.0

[sub_resource type="CapsuleShape" id=8]
height = 3.0

[sub_resource type="CylinderShape" id=11]

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Rise"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 85 ), Vector2( 0, 2 ) ]
}

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 2 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 8 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )
shape = SubResource( 11 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Camera" type="Camera" parent="Head"]

[node name="InteractionRay" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -8 )

[node name="GunRay" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -25 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedrunLabel" type="Label" parent="UI"]
anchor_right = 1.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 16 )
text = "00 : 00 : 00 : 00"
align = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_scale = Vector2( 0.05, 0.05 )
rect_pivot_offset = Vector2( 20, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractionHint" type="Label" parent="UI"]
modulate = Color( 0, 1, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 9.0
margin_right = 160.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 20, 20 )
custom_fonts/font = SubResource( 6 )
text = "[E] Interact"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objective" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="UI/Objective"]
margin_left = 2.0
margin_top = 21.0
margin_right = 130.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 5 )
text = "piss myself"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepNumber" type="Label" parent="UI/Objective"]
margin_left = 1.0
margin_right = 129.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 10 )
text = "Step 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gun" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UI/Gun"]
position = Vector2( 0, 2 )
scale = Vector2( 0.74, 0.75 )
texture = ExtResource( 5 )
offset = Vector2( 26, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Gun"]
anims/RESET = SubResource( 15 )
anims/Rise = SubResource( 14 )

[node name="ShotSFX" type="AudioStreamPlayer" parent="UI/Gun"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="Dialog" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -88.0
margin_right = 160.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.662745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogName" type="Label" parent="UI/Dialog"]
margin_top = -5.0
margin_right = 113.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 13 )
text = "Ass"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="Label" parent="UI/Dialog"]
margin_left = 12.0
margin_top = 14.0
margin_right = 304.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 12 )
text = "Assest of the asses
whatever that means"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished" from="UI/Gun/ShotSFX" to="UI/Gun" method="_on_ShotSFX_finished"]
